2005-05-02  John Levon  <levon@movementarian.org>

	* daemon/Makefile.am:
	* daemon/opd_anon.h:
	* daemon/opd_anon.c:
	* daemon/init.c:
	* daemon/opd_cookie.c:
	* daemon/opd_events.h:
	* daemon/opd_events.c:
	* daemon/opd_mangling.c:
	* daemon/opd_sfile.h:
	* daemon/opd_sfile.c:
	* daemon/opd_trans.h:
	* daemon/opd_trans.c:
	* daemon/liblegacy/opd_sample_files.c:
	* doc/oprofile.xml:
	* libabi/abi.cpp:
	* libabi/opimport.cpp:
	* libabi/tests/abi_test.cpp:
	* libop/op_mangle.h:
	* libop/op_mangle.c:
	* libop/op_sample_file.h:
	* libpp/callgraph_container.cpp:
	* libpp/image_errors.cpp:
	* libpp/op_header.cpp:
	* libpp/parse_filename.cpp:
	* libpp/populate.cpp:
	* libpp/profile.h:
	* libpp/profile.cpp:
	* libpp/profile_spec.cpp:
	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp:
	* pp/opannotate.cpp:
	* pp/opgprof.cpp: add basic anon mapping support

2005-04-28  John Levon  <levon@movementarian.org>

	* utils/opcontrol:
	* doc/opcontrol.1.in:
	* doc/oprofile.xml: add opcontrol --status

2005-04-28  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_sfile.c: clear only 256 entry in the sfile lru list

2005-04-28  John Levon  <levon@movementarian.org>

	* libabi/abi.cpp:
	* libabi/op_import.cpp: add cg_to_is_kernel to abi

	* configure.in:
	* libabi/tests/Makefile.am:
	* libabi/tests/abi_test.cpp: move test to subdir

2005-04-28  Philippe Elie  <phil.el@wanadoo.fr>

	* module/ia64/op_pmu.c: compile fix, pfm_syst_info has been added
	  between 2.4.20 and 2.4.21

2005-04-27  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil/op_file.h: op_file_readable() accept only regular file
	* libutil/op_file.c: 
	* libutil++/tests/file_manip_tests.cpp:

2005-04-27  John Levon  <levon@movementarian.org>

	* daemon/opd_sfile.h:
	* daemon/opd_sfile.c: rewrite. Fix --no-vmlinux taking up
	  CPU when using call graph profiling

2005-04-27  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.h: remove dead prototype

2005-04-25  Philippe Elie  <phil.el@wanadoo.fr>
